--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.2",
     "next": "15.3.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-hook-form": "^7.56.4",
+    "react-redux": "^9.2.0",
+    "zod": "^3.25.17"
+
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
