--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-hook-form": "^7.56.4",
     "react-redux": "^9.2.0",
     "zod": "^3.25.17"
-
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -30,6 +29,7 @@
     "@types/react-redux": "^7.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
