--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "clsx": "^2.1.1",
     "next": "15.3.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
