--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-redux": "^7.1.34",
-    "eslint": "^9",
+    "eslint": "^8.56.0",
     "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
