--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.2",
-    "clsx": "^2.1.1",
     "next": "15.3.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-redux": "^9.2.0",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.25.17"
   },
   "devDependencies": {
